--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Adding dependencies
+buildscript{
+    ext{
+     lifecycle_version = "2.5.1"
+     arch_version = "2.1.0"
+    fragment_version = "1.5.5"
+    activity_version = "1.6.1"
+    nav_version = "2.5.3"
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
